--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://hyeon-juu.github.io/react-wakuwaku",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,7 +41,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://hyeon-juu.github.io/react-wakuwaku"
+    ]
   }
 }
